--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-reactivestorage",
-  "version": "1.3.0",
-  "description": "Reactive layer for interacting with localStorage from Vue.",
+  "name": "vue-reactive-storage",
+  "version": "1.3.1",
+  "description": "Reactive layer for interacting with localStorage from Vue 2.",
   "main": "dist/index.js",
   "scripts": {
     "test": "test"
