--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
   "homepage": "https://github.com/ropbla9/vue-reactivestorage#readme",
   "dependencies": {
     "store": "^1.3.20"
+  },
+  "devDependencies": {
+    "eslint": "^3.16.1",
+    "eslint-config-standard": "^7.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
