--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "test",
-    "lint": "eslint dist/*.js"
+    "lint": "eslint src/*.js"
   },
   "repository": {
     "type": "git",
