--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "test",
+    "build": "webpack --config webpack.config.js",
     "lint": "eslint src/*.js"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "eslint": "^3.16.1",
     "eslint-config-standard": "^7.0.0",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^2.0.1"
+    "eslint-plugin-standard": "^2.0.1",
+    "webpack": "^2.2.1"
   }
 }
