--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "store": "^1.3.20"
   },
   "devDependencies": {
+    "buble": "^0.15.2",
+    "buble-loader": "^0.4.1",
     "eslint": "^3.16.1",
     "eslint-config-standard": "^7.0.0",
     "eslint-plugin-promise": "^3.5.0",
